--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".di.AstralJourneyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -10,9 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".di.AstralJourneyApp"
         android:theme="@style/Theme.AstralJourney"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.main.horoscopodetail.HoroscopoDetailActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.main.home.MainActivity"
             android:exported="true">
